# llm-templated-router

./: CLAUDE.md  Cargo.toml  LICENSE.md  Makefile  README.md
aytest/: Cargo.toml  Makefile
aytest/instruct/: main.md
aytest/src/: main.rs
claude-code-router/: Cargo.toml
claude-code-router/instruct/: config.md  message_transformer.md  provider.md  router.md  server.md
claude-code-router/instruct/transformers/: gemini_transformer.md  maxtoken_transformer.md  mod.md  openrouter_transformer.md
claude-code-router/src/: config.rs  lib.rs  message_transformer.rs  provider.rs  provider.rs.draft  router.rs  server.rs  server.rs.draft
claude-code-router/src/transformers/: gemini_transformer.rs  maxtoken_transformer.rs  mod.rs  openrouter_transformer.rs
llm/: Cargo.toml  Makefile
