[package]
name = "claude-code-router"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ccr"
path = "src/bin/ccr.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"